--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
+    "node-cron": "^3.0.2",
+    "request": "^2.88.2"
   }
 }
